test_regress/t/t_interface_ar3.out
%Error-UNSUPPORTED: t/t_interface_ar3.v:16:36: Unsupported: interface slices
                                             : ... note: In instance 't'
   16 |    sub sub01 [2] (.clk, .infc(iinst[0:1]));
      |                                    ^
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error: Internal Error: t/t_interface_ar3.v:16:36: ../V3Inst.cpp:#: No interface varref under array
                                                 : ... note: In instance 't'
   16 |    sub sub01 [2] (.clk, .infc(iinst[0:1]));
      |                                    ^
                        ... This fatal error may be caused by the earlier error(s); resolve those first.
